# polygon-freelance-marketplace

./: .solhint.json  .vercelignore  AGENT_FIX_LOG.md  AGENT_TRUTH_LOG.md  ARCHITECTURE.md  AUDIT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_CHAIN_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_V2.md  DEPLOYMENT_INSTRUCTIONS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  Dockerfile  ENV_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  PROGRESS.md  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  SOVEREIGN_DEPLOY_GUIDE.md  SOVEREIGN_ROADMAP.md  SURPLUS_LEDGER.md  TestReport.md  VERCEL_DEPLOYMENT.md  ZenithVerify.js  build_debug_v3.txt  build_error_log.txt  build_error_log_v2.txt  build_final_log.txt  build_log.txt  build_log_v2.txt  (+13 more)
.github/: pull_request_template.md
backend/: audit_backend.txt  backend_lint_check.txt  eslint.config.js  lint_output.txt  package-lock.json  package.json  requirements_ai.txt  server_output.txt
ceramic/: profile.graphql
contracts/: .solhint.json  NODE_COMPATIBILITY.md  README.md  audit_contracts_final.txt  audit_final.json  build_errors.txt  check_job_debug.txt  cleanup_quotes.py  compile_err.txt  compile_error.txt  compile_error_full.txt  compile_error_full_v2.txt  compile_error_v6.txt  compile_errors_v2.txt  compile_out.txt  compile_out_2.txt  compile_output.txt  coverage-output.txt  current_errors.txt  deploy_log.txt  deploy_log_pure.txt  trace.txt  (+21 more)
solana/programs/polylance-solana/: Cargo.toml
solana/programs/polylance-solana/src/: lib.rs
(+437 files in other folders)
